--- a/src/css/user.style.css
+++ b/src/css/user.style.css
@@ -4,6 +4,7 @@ body {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 #edit_profile_url:invalid {
@@ -437,17 +438,19 @@ header h1 {
 
 
 .section_userInfo {
-    gap:              1.375rem;
-    width:            100%;
-    height:           10.8125rem;
-    display:          flex;
-    padding:          1rem 1.25rem 3rem 1.25rem;
-    min-height:       96px;
-    align-items:      center;
-    margin-bottom:    8vh;
-    /* justify-content:  center; */
+
+    gap: 1.375rem;
+    width: 100%;
+    height: 8rem;
+    display: flex;
+    padding: 1rem 1.25rem 1rem 1.25rem;
+    min-height: 96px;
+    align-items: center;
+    margin-bottom: 8vh;
+    /* justify-content: center; */
     background-color: rgba(var(--color-blue-dark), 1);
 }
+
 
 .section_userInfo_image {
     width:         3.75rem;
